cocos2d-x-3.1-rc0 May.16 2014
    [FIX]           Math: Vector2->Vec2, Vector3->Vec3, Vector4->Vec4, Matrix->Mat4
    [FIX]           GLProgramState: Supports multitexturing
    [FIX]           Studio:ActionObject: correct TotalTime of ActionObject

cocos2d-x-3.1-alpha1 May.9 2014
    [NEW]           Animate: Dispatch a custom event after an animation frame is displayed
    [NEW]           GLProgram: Easy to customize uniforms and attributes by using the new class GLProgramState
    [NEW]           Template: cpp project support Eclipse c++ project
    [NEW]           UI: add navigation support
    [NEW]           UI: add a widget to play video
    [NEW]           VS: support VS 2013

    [FIX]           Audio: pause sound automatically when go to background on Android
    [FIX]           Director: remove keepData and releaseData
    [FIX]           Label: label is unsharp if it's created by system font with small size on iOS & Mac OS X
    [FIX]           Label: Label created with system font is still visible when its opacity is 0
    [FIX]           Label: Label created with system font havs black border on WP8/WINRT
    [FIX]           Lua: A potential crash in the bindings of sp.SkeletonAnimation.setAnimation
    [FIX]           Lua: Lua template should fail to launch on lua error
    [FIX]           ParticleSystem: Particles can be created without a texture
    [FIX]           ParticleSystem: yFlippedCoord behavior fixed.
                      Added cocos2d/tools/particle to fix particles that were based on the old (broken) behaviour
    [FIX]           Setup.py: Added SDK / NDK detection based on PATH
    [FIX]           UIText: support TTF
    [FIX]           Value: all types share the same union to reduce memory usage

cocos2d-x-3.1-alpha0 May.1 2014
     [NEW]          Android: Adds support for get response when Activity's onActivityResult is triggered
     [NEW]          Core: Adds RefPtr<T> smart pointer support