@@ -8,7 +8,6 @@ precision lowp float;
  
 varying vec4 v_fragmentColor; 
 varying vec2 v_texCoord; 
-uniform sampler2D CC_Texture0; 
 uniform vec4 v_effectColor; 
 uniform vec4 v_textColor; 
  
