@@ -30,7 +30,6 @@ precision lowp float;
 \n#endif\n
 
 varying vec2 v_texCoord;
-uniform sampler2D CC_Texture0;
 
 void main()
 {
