@@ -33,8 +33,6 @@ uniform vec4 u_color;
 
 varying vec2 v_texCoord;
 
-uniform sampler2D CC_Texture0;
-
 void main()
 {
     gl_FragColor =  texture2D(CC_Texture0, v_texCoord) * u_color;
